# 2The-Simpsons-Hit-and-Run-Android

./: CMakeLists.txt  README.md
.antigravitycli/: c840cb66-7ec8-4484-be42-608a1831259e.json
.github/workflows/: 2build.yml  build.yml  build2.yml
android-project/: build.gradle
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/cpp/lsfg/: CMakeLists.txt  lsfg_integration.cpp  lsfg_integration.hpp  lsfg_jni.cpp
android-project/app/src/main/cpp/lsfg/framegen/include/common/: exception.hpp  utils.hpp
android-project/app/src/main/cpp/lsfg/framegen/include/core/: buffer.hpp  commandbuffer.hpp  commandpool.hpp  descriptorpool.hpp  descriptorset.hpp  device.hpp  fence.hpp  image.hpp  instance.hpp  pipeline.hpp  sampler.hpp  semaphore.hpp  shadermodule.hpp
android-project/app/src/main/cpp/lsfg/framegen/include/pool/: resourcepool.hpp  shaderpool.hpp
android-project/app/src/main/cpp/lsfg/framegen/public/: lsfg_3_1.hpp  lsfg_3_1p.hpp
android-project/app/src/main/cpp/lsfg/framegen/src/common/: exception.cpp  utils.cpp
android-project/app/src/main/cpp/lsfg/framegen/src/core/: buffer.cpp  commandbuffer.cpp  commandpool.cpp  descriptorpool.cpp  descriptorset.cpp  device.cpp  fence.cpp  image.cpp  instance.cpp  pipeline.cpp  sampler.cpp  semaphore.cpp  shadermodule.cpp
android-project/app/src/main/cpp/lsfg/framegen/src/pool/: resourcepool.cpp  shaderpool.cpp
android-project/app/src/main/cpp/lsfg/framegen/v3.1_include/v3_1/: context.hpp
android-project/app/src/main/cpp/lsfg/framegen/v3.1_include/v3_1/shaders/: alpha.hpp  beta.hpp  delta.hpp  gamma.hpp  generate.hpp  mipmaps.hpp
android-project/app/src/main/cpp/lsfg/framegen/v3.1_src/: context.cpp  lsfg.cpp
android-project/app/src/main/cpp/lsfg/framegen/v3.1_src/shaders/: alpha.cpp  beta.cpp  gamma.cpp  generate.cpp  mipmaps.cpp
android-project/app/src/main/cpp/lsfg/framegen/v3.1p_include/v3_1p/: context.hpp
android-project/app/src/main/cpp/lsfg/framegen/v3.1p_include/v3_1p/shaders/: alpha.hpp  beta.hpp  gamma.hpp  generate.hpp  mipmaps.hpp
android-project/app/src/main/cpp/lsfg/framegen/v3.1p_src/: context.cpp  lsfg.cpp
android-project/app/src/main/cpp/lsfg/framegen/v3.1p_src/shaders/: alpha.cpp  beta.cpp  gamma.cpp  generate.cpp  mipmaps.cpp
android-project/app/src/main/java/com/c4rlox/simpsons/: GamepadOverlayView.java  LsfgBridge.java  SimpsonsActivity.java  TouchOverlay.java
android-project/app/src/main/java/org/libsdl/app/: SDLControllerManager.java
android-project/app/src/main/res/values/: strings.xml
android-project/app/src/main/res/values-es/: strings.xml
android-project/app/src/main/res/values-pt/: strings.xml
code/: CMakeLists.txt
code/contexts/: bootupcontext.cpp  playingcontext.cpp
code/input/: MouseCursor.cpp  button.h  inputmanager.cpp  inputmanager.h  jni_touch_bridge.cpp  touchGui.cpp  touchGui.h  usercontroller.cpp  usercontroller.h
code/main/: fpscounter.cpp  fpscounter.h  game.cpp  win32platform.cpp
code/presentation/gui/: guimenu.cpp  guiscreen.cpp  guiscreen.h  guiwindow.h
code/presentation/gui/frontend/: guiscreenmainmenu.cpp  guiscreenmissiongallery.cpp  guiscreenmissiongallery.h  guiscreenplaymovie.cpp  guiscreenscrapbookcontents.cpp  guiscreenscrapbookcontents.h  guiscreenskingallery.cpp  guiscreenskingallery.h  guiscreenvehiclegallery.cpp  guiscreenvehiclegallery.h
code/presentation/gui/ingame/: guiscreenmissionselect.cpp  guiscreenmissionselect.h  guiscreenphonebooth.cpp  guiscreenphonebooth.h  guiscreenpurchaserewards.cpp  guiscreenpurchaserewards.h
code/presentation/gui/minigame/: guiscreenminihud.cpp  guiscreenminimenu.cpp  guiscreenminimenu.h  guiscreenminipause.cpp  guiscreenminisummary.cpp
code/render/RenderManager/: FrontEndRenderLayer.cpp
code/worldsim/character/: character.cpp  character.h
libs/pure3d/pddi/: pddi.hpp
libs/pure3d/pddi/gl/: glcon.cpp
libs/pure3d/pddi/gl/display_win32/: gldisplay.cpp
libs/pure3d/pddi/gles/: glcon.cpp
libs/pure3d/pddi/gles/display_win32/: gldisplay.cpp
libs/radcore/src/radfile/common/: drive.hpp  requests.cpp
libs/radcore/src/radfile/sdl/: sdldrive.cpp  sdldrive.hpp
